--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -10,3 +10,8 @@ body {
 * {
     box-sizing: border-box;
 }
+.App__empty {
+    font-size: 14px;
+    line-height: 14px;
+    color: rgba(255,255,255,.45);
+}
