--- a/src/assets/styles/components/CarouselItem.scss
+++ b/src/assets/styles/components/CarouselItem.scss
@@ -13,6 +13,9 @@
     -webkit-transform-origin: center left;
     transform-origin: center left;
 }
+.carousel-item:last-child {
+    transform-origin: center right;
+}
 
 .carousel-item:hover ~ .carousel-item {
     -webkit-transform: translate3d(100px, 0, 0);
