--- a/src/assets/styles/Home.scss
+++ b/src/assets/styles/Home.scss
@@ -10,7 +10,7 @@ body {
 * {
     box-sizing: border-box;
 }
-.App__empty {
+.Home__empty {
     font-size: 14px;
     line-height: 14px;
     color: rgba(255,255,255,.45);
